--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+*{
+    padding: 0;
+    margin: 0;
+    font-family:sans-serif
+}
+.container{
+
+    width: 90%;
+    margin: 0 auto;
+}
 aside{
     position: fixed;
     width:300px;
@@ -6,29 +16,76 @@ aside{
     padding: 20px;
     padding-bottom: 40px;
     float: left;
+    height: 100vh;
 }
 aside img{
     padding-top: 20px;
     padding-bottom: 20px;
 }
 aside h3{
-    margin-bottom:0 ;
+    margin:  10px;
     font-size: ;
 }
 aside  p{
     font-size: 11px;
+    padding-bottom: 15px;
 }
 .nav{
     text-align: center;
     padding-left: 0;
 }
 .nav-item{
-    
     list-style: none;
+    padding-top: 7px;
+}
+.nav-item a:hover{
+    color: chartreuse;
+    transition: 0.4s;
 }
 .nav-item a{
    text-decoration: none; 
    text-transform: uppercase;
    font-size: 14px;
    padding-top: 4px;
+   color: black;
+}
+.footer{
+    margin-top: 20px;
+    font-size: 18px !important;
+}
+
+/* hero section */
+
+.hero{
+    margin-left: 340px;
+    background-image:url(/images/image2.webp) ;
+    background-position: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+.hero-description{
+    position: relative;
+    top: 300px;
+    left:30px;
+    padding-left: 30px;
+}
+.hero-description h3{
+    font-size: 18px;
+    padding-bottom:10px ;
+    font-weight: 400;
+    letter-spacing: 2px;
+    color: #797979;
+/* }
+.hero-description h1{
+    letter-spacing: 2px;
+    margin-top: 16px;
+    font-size: 26px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    color: #05364E
+} */
+.hero-description p{
+    color: #797979;
+    font-size:20px ;
+
 }
