--- a/css/main.css
+++ b/css/main.css
@@ -230,19 +230,91 @@ aside  p{
     height: 40px;
 }
 
-.background{
-    width: 60vh;
-    overflow: ;
+/* skills section */
+.skills{
+    padding-left: 30px;
+    padding-top: 210px;
+    padding-bottom: 210px;
 }
-.background img{
-    width: 61vw;
-    
-    position: fixed;
-    top: 100px;
-    z-index: -1;
-    left: 340px;
+.skills-item{
+    padding-top: 40px;
 }
-.oyna{
-    height: 50px;
-    padding-bottom: 500px;
+.skill{
+    width: 100%;
+    height: 4px;
+    background-color:#ddd;
+    border-radius: 2px;
+    position: relative;
+}
+.skill-75{
+    width: 75%;
+    background-color: #2c98f0;
+}
+.skill-75:after{
+    background-color: #2c98f0;
+    left: 75% ;
+}
+.skill div{
+    border-radius: 2px;
+}
+.skill-85{
+    height: 6px;
+    width: 85%;
+    background-color: #f9bf3f;
+}
+.skill-85:after{
+    background-color: #f9bf3f;
+    left: 85% ;
+}
+.skill-70{
+    width: 70%;
+    background-color: #2fa499;
+}
+.skill-70:after{
+    background-color: #2fa499;
+    left: 70% ;
+}
+.skill-60{
+    width: 60%;
+    background-color: #ec5453;
+}
+.skill-60:after{
+    background-color: #ec5453;
+    left: 60% ;
+}
+.skill-90{
+    width: 90%;
+    background-color: #a84cb8;
+}
+.skill-90:after{
+    background-color: #a84cb8;
+    left: 90% ;
+}
+.skill-80{
+    width: 80%;
+    background-color: #4054b2;
+    left: 70%;  
+}
+.skill-80:after{
+    background-color: #4054b2;
+    left: 80% ;
+}
+.skills-item{
+    margin: 10px;
+    margin-left: 0;
+}
+.skills-item p{
+    margin: 0;
+    font-size: 14px;
+}
+.u-skill{
+    height: 4px;
+}
+.u-skill:after{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    content: "";
+    border-radius: 50%;
+    top: -3px;
 }
