--- a/css/main.css
+++ b/css/main.css
@@ -406,3 +406,54 @@ aside  p{
         
     }
 }
+/* works */
+.work{
+    padding-top:210px ;
+    padding-left: 30px;
+}
+.work-menu{
+    text-align: left;
+}
+.work-menu ul{
+    display: flex;
+    padding-left: 0px !important;
+    
+}
+.work-menu ul li{
+    list-style: none;
+    padding-right: 15px;
+    font-size: 14px;
+    
+}
+.work-img{
+    margin-bottom: 30px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    height: 300px;
+    width: 100%;
+    display: block;
+    padding-right: 10px;
+}
+
+.work-img img{
+    width:100%;
+    height: 100%;
+    z-index: -1;
+    
+}
+.con{
+    position: absolute;
+    top:0px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 3;
+    background-color: #01ff1a66;
+}
+.row-item > div{
+    width: 50%;
+    display: inline-block;
+    float: left;
+}
