work section copleted

--- a/css/main.css
+++ b/css/main.css
@@ -395,21 +395,10 @@ aside  p{
     animation-timing-function: ease-in-cubic-bezier(0.06, 0.21, 0.77, 0.94);
     animation-iteration-count: infinite;
 }
-
-@keyframes box{
-    0%{
-        box-shadow: 0px 0px 0px 3px  rgb(221 221 221);
-    }
-    100%{
-        box-shadow: 0px 0px 10px 10px  chartreuse;
-        transform: scale(1.05);
-        
-    }
-}
-/* works */
 .work{
     padding-top:210px ;
     padding-left: 30px;
+    padding-bottom: 210px;
 }
 .work-menu{
     text-align: left;
@@ -450,10 +439,70 @@ aside  p{
     bottom: 0;
     right: 0;
     z-index: 3;
-    background-color: #01ff1a66;
+    background-color: #2c98f0;
+    opacity: 0;
+    transition:all 0.5s;
+    padding: 30px;
 }
-.row-item > div{
+
+.work-img:hover .con{
+    opacity: 1;
+}
+.row-item{
     width: 50%;
-    display: inline-block;
-    float: left;
 }
+
+.con h1{
+    font-size: 16px;
+    color: #fff;
+    text-transform:uppercase;
+    line-height: 1.1;
+    letter-spacing: 2px;
+}
+.con p{
+    font-size: 14px;
+    padding-top: 1rem;
+    line-height: 1.1;
+    letter-spacing: 1px;
+    color: #fff;
+}
+.con .icon{
+    position: absolute;
+    bottom: 0;
+    padding-bottom:20px ;
+}
+.con .icon span{
+    background: rgba(255,255,255,.5); 
+    padding: 5px;
+    margin: 10px;
+    margin-left:0 ;
+    border-radius: 5px;
+}
+.con .icon span a{
+    color: #000;
+    font-size: 12px;
+    text-decoration: none;
+}
+button{
+    width: 100%;
+    background-color:#2c98f0;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    transition: all 0.5s;
+}
+button:hover{
+     background-color: #01ff19;
+}
+
+@keyframes box{
+    0%{
+        box-shadow: 0px 0px 0px 3px  rgb(221 221 221);
+    }
+    100%{
+        box-shadow: 0px 0px 10px 10px  chartreuse;
+        transform: scale(1.05);
+        
+    }
+}
+/* works */
