--- a/css/main.css
+++ b/css/main.css
@@ -491,9 +491,62 @@ button{
     border-radius: 3px;
     transition: all 0.5s;
 }
+button a{
+    color:#01ff19 ;
+}
 button:hover{
      background-color: #01ff19;
+     
 }
+button:hover a{
+    color: #2c98f0;
+}
+
+/* Blog section */
+.blog{
+    padding-left: 30px;
+}
+.blog-items{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+}
+.blog-item{
+    width: 33%;
+    margin-right: 20px;
+    overflow: hidden;
+    
+    transition: all 0.5s !important;
+}
+.blog-image{
+    transition: all 0.5s;
+    width: 100%;
+}
+.blog-image img{
+    width: 100%;
+}
+.blog-description{
+    padding: 10px;
+}
+.blog-item span{
+    font-size: 12px;
+    color: rgba(0,0,0,.4)!important;
+}
+.blog-description h3{
+    font-size: 15px;
+}
+.blog-description p{
+    font-size:12px ;
+    padding-top: 10px;
+    color: rgba(0,0,0,.7);
+}
+.blog-item:hover{
+    box-shadow: 0px 0px 10px 5px #01ff19 !important;
+}
+.blog-item:hover .blog-image{
+    transform:scale(1.1)
+}
+
 
 @keyframes box{
     0%{
