--- a/css/main.css
+++ b/css/main.css
@@ -483,7 +483,7 @@ aside  p{
     font-size: 12px;
     text-decoration: none;
 }
-button{
+.button{
     width: 100%;
     background-color:#2c98f0;
     padding: 10px;
@@ -491,14 +491,14 @@ button{
     border-radius: 3px;
     transition: all 0.5s;
 }
-button a{
+.button a{
     color:#01ff19 ;
 }
-button:hover{
+.button:hover{
      background-color: #01ff19;
      
 }
-button:hover a{
+.button:hover a{
     color: #2c98f0;
 }
 
@@ -546,6 +546,47 @@ button:hover a{
 .blog-item:hover .blog-image{
     transform:scale(1.1)
 }
+/* contact section */
+.contact{
+    padding-top: 210px;
+    padding-left: 30px;
+    padding-bottom: 150px;
+}
+.contact-items{
+    display: flex;
+    flex-direction: row;
+}
+.contact-items div{
+    width: 50%;
+}
+.contact-items h1{
+    font-size: 12px;
+    margin-bottom: 50px;
+    color:rgba(0,0,0,.7);
+    margin-top: 14px;
+}
+.contact-items h1 span{
+    padding: 20px;
+    background-color: #f2f3f7;
+    margin-right: 10px;
+    font-size: 14px;
+    border-radius: 2px;
+}
+form input,textarea{
+    width: 100%;
+    border: none;
+    margin-bottom: 20px;
+    background-color: #f2f3f7 ;
+    padding: 8px 5px;
+    font-size: 14px;
+    margin-left: 10px;
+    outline: none
+}
+form textarea{
+    min-height:150px  ; 
+}
+
+
 
 
 @keyframes box{
@@ -558,4 +599,3 @@ button:hover a{
         
     }
 }
-/* works */
