--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ aside  p{
     font-weight: 400;
     letter-spacing: 2px;
     color: #797979;
+    letter-spacing: 1.1;
 }
 .hero-description h1{
     letter-spacing: 2px;
@@ -504,6 +505,7 @@ aside  p{
 
 /* Blog section */
 .blog{
+    padding-top: 150px;
     padding-left: 30px;
 }
 .blog-items{
@@ -512,10 +514,9 @@ aside  p{
     margin-bottom: 30px;
 }
 .blog-item{
-    width: 33%;
+    width:;
     margin-right: 20px;
     overflow: hidden;
-    
     transition: all 0.5s !important;
 }
 .blog-image{
@@ -548,7 +549,7 @@ aside  p{
 }
 /* contact section */
 .contact{
-    padding-top: 210px;
+    padding-top: 150px;
     padding-left: 30px;
     padding-bottom: 150px;
 }
