--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family:sans-serif
+    font-family:sans-serif;
 }
 .container{
     width: 70% !important;
@@ -12,25 +12,24 @@
 }
 aside{
     position: fixed;
-    width:300px;
+    width:18.75rem;
     text-align: center;
     background-color: #f2f3f7;
-    padding: 20px;
-    padding-bottom: 40px;
+    padding: 1.25rem;
+    padding-bottom: 2.5rem;
     float: left;
     height: 100vh;
 }
 aside img{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
 }
 aside h3{
-    margin:  10px;
-    font-size: ;
+    margin:  0.625rem;
 }
 aside  p{
-    font-size: 11px;
-    padding-bottom: 15px;
+    font-size: 0.6875rem;
+    padding-bottom: 0.9375rem;
 }
 .nav{
     text-align: center;
@@ -40,7 +39,7 @@ aside  p{
 }
 .nav-item{
     list-style: none;
-    padding-top: 7px;
+    padding-top: 0.4375rem;
 }
 .nav-item a:hover{
     color: chartreuse;
@@ -49,18 +48,18 @@ aside  p{
 .nav-item a{
    text-decoration: none; 
    text-transform: uppercase;
-   font-size: 14px;
+   font-size: 0.875rem;
    padding-top: 4px;
    color: black;
 }
 .footer{
-    margin-top: 20px;
-    font-size: 18px !important;
+    margin-top: 1.25rem;
+    font-size: 1.125rem !important;
 }
 
 /* contact setion */
 .contect{
-    margin-left: 300px;
+    margin-left: 16.875rem;
 }
 /* hero section */
 
@@ -73,13 +72,13 @@ aside  p{
 }
 .hero-description{
     position: relative;
-    top: 300px;
-    left:30px;
-    padding-left: 30px;
+    top: 18.75rem;
+    left:1.875rem;
+    padding-left: 1.875rem;
 }
 .hero-description h3{
-    font-size: 18px;
-    padding-bottom:10px ;
+    font-size: 1.125rem;
+    padding-bottom:0.625rem ;
     font-weight: 400;
     letter-spacing: 2px;
     color: #797979;
@@ -87,34 +86,34 @@ aside  p{
 }
 .hero-description h1{
     letter-spacing: 2px;
-    margin-top: 16px;
-    font-size: 26px;
+    margin-top: 1rem;
+    font-size: 1.625rem;
     font-weight: 600;
     margin-bottom: 1rem;
     color: #05364E
 } */
 .hero-description p{
     color: #797979;
-    font-size:20px;
+    font-size:1.25rem;
 }
 
 /* about us */
 .about{
-    padding-left:30px;
+    padding-left:1.875rem;
     background-color: #fff;
-    padding-top: 60px;
-    padding-bottom: 120px;
+    padding-top: 3.75rem;
+    padding-bottom: 11.25rem;
 }
 .sub-title p{
-    margin-bottom: 15px;
-    font-size: 10px;
+    margin-bottom: 0.9375rem;
+    font-size: 0.625rem;
     text-transform: uppercase;
     color: #999999;
     font-weight: 500;
     letter-spacing:5px
 }
 .sub-title h3{
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 600;
     text-transform:uppercase;
     letter-spacing: 2px;
@@ -125,7 +124,7 @@ aside  p{
 .about-description > p{
     color: #797979;
     opacity: 0.7;
-    font-size: 14px;
+    font-size: 0.875rem;
     letter-spacing: 1px;
     line-height: 1.6;
 }
@@ -137,37 +136,37 @@ aside  p{
     display: flex;
     flex-direction: row;
     justify-content:space-around ;
-    margin-top: 90px;
+    margin-top: 5.625rem;
 }
 .about-item{
-    padding-top:24px !important;
-    padding-left: 25px !important;
-    padding-right: 25px !important;
-    margin-right: 10px;
+    padding-top:1.5625rem !important;
+    padding-left: 1.5625rem !important;
+    padding-right: 1.5625rem !important;
+    margin-right: 0.625rem;
     border-bottom: 3px solid rgb(218, 218, 20);
     transition: all 0.5s !important;
 }
 
 .about-item:hover{
-    box-shadow: 0px 0px 10px 5px #01ff19 !important;
+    box-shadow: 0px 0px 0.625rem 5px #01ff19 !important;
     transform: scale(1.05) !important;
 }
 .about-item i{
-    padding-bottom: 20px;
+    padding-bottom: 1.25rem;
     color: rgb(218, 218, 20);
 }
 .about-item p{
-    font-size:16px;
+    font-size:1rem;
     font-weight: 500;
 }
 /* hire section */
 .hire{
-    padding: 30px;
+    padding: 1.875rem;
     background-color: #f9bf3f;
     transition: all 0.7s;
 }
 .hire h2{
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight:400;
     color: #000;
     letter-spacing: 1px;
@@ -181,27 +180,27 @@ aside  p{
 
 }   
 .hire:hover{
-    box-shadow: 0px 0px 10px 5px #01ff19 !important;
+    box-shadow: 0px 0px 0.625rem 5px #01ff19 !important;
     transform: scale(1.05);
 }
 
 /* services section */
 .services{
-    padding-top: 60px;
-    padding-bottom: 135px;
-    padding-left: 30px;
+    padding-top: 3.75rem;
+    padding-bottom: 8.4375rem;
+    padding-left: 1.875rem;
     background-color: #fff;
 }
 .services-items{
     display:flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-left: -30px;
+    margin-left: -1.875rem;
 }
 .services-item{
     width: 24%;
-    margin: 30px;
-    padding: 15px;
+    margin: 1.875rem;
+    padding: 0.9375rem;
     text-align: center;
     background-color: #fff;
     transition: all 0.7s;
@@ -209,36 +208,36 @@ aside  p{
 }
 
 .services-item:hover{
-    box-shadow: 0px 0px 10px 5px #01ff19 !important;
+    box-shadow: 0px 0px 0.625rem 5px #01ff19 !important;
     transform: scale(1.05);
 }
 .services-item h3{
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 700;
 }
 .services-item p{
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: 500;
     line-height: 1.7;
-    padding-top: 20px;
+    padding-top: 1.25rem;
 }
 .fig{
     position: relative;
     left: 38%;
-    top: -30px;
+    top: -1.875rem;
     background-color:#797979 ;
-    width: 40px;
-    height: 40px;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 /* skills section */
 .skills{
-    padding-left: 30px;
-    padding-top: 60px;
-    padding-bottom: 135px;
+    padding-left: 1.875rem;
+    padding-top: 3.75rem;
+    padding-bottom: 8.4375rem;
 }
 .skills-item{
-    padding-top: 40px;
+    padding-top: 2.5rem;
 }
 .skill{
     width: 100%;
@@ -301,20 +300,20 @@ aside  p{
     left: 80% ;
 }
 .skills-item{
-    margin: 10px;
+    margin: 0.625rem;
     margin-left: 0;
 }
 .skills-item p{
     margin: 0;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 .u-skill{
     height: 4px;
 }
 .u-skill:after{
     position: absolute;
-    width: 10px;
-    height: 10px;
+    width: 0.625rem;
+    height: 0.625rem;
     content: "";
     border-radius: 50%;
     top: -3px;
@@ -322,54 +321,54 @@ aside  p{
 
 /* education */
 .education{ 
-    padding-left: 30px;
-    padding-bottom: 135px;
-    padding-top: 60px;
+    padding-left: 1.875rem;
+    padding-bottom: 8.4375rem;
+    padding-top: 3.75rem;
 }
 .color-grey{
     background-color: #f2f3f7 !important;
 }
 /* experince */
 .experience{
-    padding-left: 30px;
+    padding-left: 1.875rem;
     position: relative;
-    padding-top: 60px;
+    padding-top: 3.75rem;
     
 }
 .experience-items{
-    padding-top: 30px;
-    padding-left: 50px;
+    padding-top: 1.875rem;
+    padding-left: 3.125rem;
     
 }
 .experience-item{
     background-color: #f2f3f7;
-    padding: 20px;
-    margin-bottom: 10px;
+    padding: 1.25rem;
+    margin-bottom: 0.625rem;
     position:relative;
 }
 .experience-item h3{
-    font-size:18px;
+    font-size:1.125rem;
     font-weight: 500;
-    margin-bottom: 15px;
+    margin-bottom: 0.9375rem;
 }
 .experience-item h3 span{
-    font-size: 14px;
+    font-size: 0.875rem;
     opacity: .4;
 }
 .experience-item p{
     color: #797979;
     opacity: 1;
-    font-size: 14px;
+    font-size: 0.875rem;
     letter-spacing: 1px;
     line-height: 1.6;
 }
 .experience-item p:before{
     content: " ";
     position: absolute;
-    width: 10px;
-    height: 10px;
-    top: 25px;
-    left: -10px;
+    width: 0.625rem;
+    height: 0.625rem;
+    top: 1.5625rem;
+    left: -0.625rem;
     border-style:solid;
     border-width: 9px 9px 9px 0;
     border-color: transparent #f2f3f7 transparent transparent;
@@ -384,10 +383,10 @@ aside  p{
 }
 .experience-item h3:before{
     content: " ";
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
     position: absolute;
-    left: -57px;
+    left: -3.5625rem;
     background-color: #2c98f0;
     border-radius: 50%;
     box-shadow: 0px 0px 0px 3px  rgb(221 221 221);
@@ -397,9 +396,9 @@ aside  p{
     animation-iteration-count: infinite;
 }
 .work{
-    padding-top:210px ;
-    padding-left: 30px;
-    padding-bottom: 210px;
+    padding-top:20.625rem ;
+    padding-left: 1.875rem;
+    padding-bottom: 20.625rem;
 }
 .work-menu{
     text-align: left;
@@ -411,20 +410,20 @@ aside  p{
 }
 .work-menu ul li{
     list-style: none;
-    padding-right: 15px;
-    font-size: 14px;
+    padding-right: 0.9375rem;
+    font-size: 0.875rem;
     
 }
 .work-img{
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     position: relative;
-    height: 300px;
+    height: 18.75rem;
     width: 100%;
     display: block;
-    padding-right: 10px;
+    padding-right: 0.625rem;
 }
 
 .work-img img{
@@ -443,7 +442,7 @@ aside  p{
     background-color: #2c98f0;
     opacity: 0;
     transition:all 0.5s;
-    padding: 30px;
+    padding: 1.875rem;
 }
 
 .work-img:hover .con{
@@ -454,14 +453,14 @@ aside  p{
 }
 
 .con h1{
-    font-size: 16px;
+    font-size: 1rem;
     color: #fff;
     text-transform:uppercase;
     line-height: 1.1;
     letter-spacing: 2px;
 }
 .con p{
-    font-size: 14px;
+    font-size: 0.875rem;
     padding-top: 1rem;
     line-height: 1.1;
     letter-spacing: 1px;
@@ -470,24 +469,24 @@ aside  p{
 .con .icon{
     position: absolute;
     bottom: 0;
-    padding-bottom:20px ;
+    padding-bottom:1.25rem ;
 }
 .con .icon span{
     background: rgba(255,255,255,.5); 
     padding: 5px;
-    margin: 10px;
+    margin: 0.625rem;
     margin-left:0 ;
     border-radius: 5px;
 }
 .con .icon span a{
     color: #000;
-    font-size: 12px;
+    font-size: 0.75rem;
     text-decoration: none;
 }
 .button{
     width: 100%;
     background-color:#2c98f0;
-    padding: 10px;
+    padding: 0.625rem;
     border: none;
     border-radius: 3px;
     transition: all 0.5s;
@@ -505,17 +504,17 @@ aside  p{
 
 /* Blog section */
 .blog{
-    padding-top: 150px;
-    padding-left: 30px;
+    padding-top: 9.375rem;
+    padding-left: 1.875rem;
 }
 .blog-items{
     display: flex;
     flex-direction: row;
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
 }
 .blog-item{
     width:;
-    margin-right: 20px;
+    margin-right: 1.25rem;
     overflow: hidden;
     transition: all 0.5s !important;
 }
@@ -527,31 +526,31 @@ aside  p{
     width: 100%;
 }
 .blog-description{
-    padding: 10px;
+    padding: 0.625rem;
 }
 .blog-item span{
-    font-size: 12px;
+    font-size: 0.75rem;
     color: rgba(0,0,0,.4)!important;
 }
 .blog-description h3{
-    font-size: 15px;
+    font-size: 0.9375rem;
 }
 .blog-description p{
-    font-size:12px ;
-    padding-top: 10px;
+    font-size:0.75rem ;
+    padding-top: 0.625rem;
     color: rgba(0,0,0,.7);
 }
 .blog-item:hover{
-    box-shadow: 0px 0px 10px 5px #01ff19 !important;
+    box-shadow: 0px 0px 0.625rem 5px #01ff19 !important;
 }
 .blog-item:hover .blog-image{
     transform:scale(1.1)
 }
 /* contact section */
 .contact{
-    padding-top: 150px;
-    padding-left: 30px;
-    padding-bottom: 150px;
+    padding-top: 9.375rem;
+    padding-left: 1.875rem;
+    padding-bottom: 9.375rem;
 }
 .contact-items{
     display: flex;
@@ -561,33 +560,36 @@ aside  p{
     width: 50%;
 }
 .contact-items h1{
-    font-size: 12px;
-    margin-bottom: 50px;
+    font-size: 0.75rem;
+    margin-bottom: 3.125rem;
     color:rgba(0,0,0,.7);
-    margin-top: 14px;
+    margin-top: 0.875rem;
 }
 .contact-items h1 span{
-    padding: 20px;
+    padding: 1.25rem;
     background-color: #f2f3f7;
-    margin-right: 10px;
-    font-size: 14px;
+    margin-right: 0.625rem;
+    font-size: 0.875rem;
     border-radius: 2px;
 }
 form input,textarea{
     width: 100%;
     border: none;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
     background-color: #f2f3f7 ;
     padding: 8px 5px;
-    font-size: 14px;
-    margin-left: 10px;
+    font-size: 0.875rem;
+    margin-left: 0.625rem;
     outline: none
 }
 form textarea{
-    min-height:150px  ; 
+    min-height:9.375rem  ; 
 }
-
-
+#check{
+    display:relative;
+    right: 0;
+    z-index: 10;
+}
 
 
 @keyframes box{
@@ -595,8 +597,32 @@ form textarea{
         box-shadow: 0px 0px 0px 3px  rgb(221 221 221);
     }
     100%{
-        box-shadow: 0px 0px 10px 10px  chartreuse;
+        box-shadow: 0px 0px 0.625rem 0.625rem  chartreuse;
         transform: scale(1.05);
         
     }
+}
+
+/* responsive */
+@media only screen and (max-width: 768px){
+    aside{
+        display: none;
+    }
+    .contect{
+        margin-left: 0;
+    }
+    .checkbtn{
+        display: block;
+    }   
+    .nav a{
+        color: azure !important;
+    }
+
+    #check:checked ~ ul{
+        right: 0;
+    }
+    #check:checked ~ aside{
+        display: block;
+    }
+
 }
