--- a/css/main.css
+++ b/css/main.css
@@ -611,18 +611,7 @@ form textarea{
     display: none;
 }
 
-.hvr-bounce-to-right {
-    display: inline-block !important;
-    vertical-align: middle ;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgb(0 0 0 / 0%);
-    position: relative;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-}
+
 @keyframes box{
     0%{
         box-shadow: 0px 0px 0px 3px  rgb(221 221 221);
@@ -673,6 +662,14 @@ form textarea{
     .contact{
         padding-left: 0;
     }
+    .services-items{
+        flex-direction: column;
+        margin-left: 0;
+    }
+    .services-item{
+        margin: 1.25rem;
+        
+    }
 }
 
 @media only screen and (max-width:600px){
@@ -684,7 +681,6 @@ form textarea{
     }
     .blog-items{
         flex-direction: column;
-
     }
     .blog-item{
         margin-bottom:20px;
